--- a/API/WebApplication/Pages/AddTeam.razor
+++ b/API/WebApplication/Pages/AddTeam.razor
@@ -1,6 +1,34 @@
 ﻿@page "/AddTeam"
-<h3>AddTeam</h3>
+@using Microsoft.AspNetCore.Components
+@using WebApplication.Data
+@using WebApplication.Models
 
+@inject ITeamService TeamService;
+@inject NavigationManager NavigationManager;
+<h3>AddTeam</h3>
+<EditForm Model="@team" OnValidSubmit="async ()=>await AddNewTea()" Context="Family">
+            <DataAnnotationsValidator></DataAnnotationsValidator>
+            <ValidationSummary></ValidationSummary>
+            <div class="form-group"> Team name <br/>
+                <InputText @bind-Value="team.TeamName"></InputText>
+            </div>
+    <div class="form-group">coach name <br/>
+        <InputText @bind-Value="team.NameOfCoach"></InputText>
+    </div>
+    <div class="form-group"> ranking <br/>
+        <InputNumber @bind-Value="team.Ranking"></InputNumber>
+    </div>
+
+            <p class="actions">
+                <button class="btn btn-outline-dark" type="submit"> Add Team</button>
+            </p>
+        </EditForm>
 @code {
-    
+    Team team = new Team();
+
+    public async Task AddNewTea()
+    {
+        await TeamService.AddTeam(team);
+        NavigationManager.NavigateTo("/added");
+    }
 }
